Added table for learnd words

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -9,3 +9,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-worte.yaml
   - include:
       file: db/changelog/changeset/import-worte.yaml
+  - include:
+      file: db/changelog/changeset/create-table-learned-words.yaml
