Added table for requests statistic

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -11,3 +11,5 @@ databaseChangeLog:
       file: db/changelog/changeset/import-worte.yaml
   - include:
       file: db/changelog/changeset/create-table-learned-words.yaml
+  - include:
+      file: db/changelog/changeset/create-table-requests-statistic.yaml
