Added index to chat_id column for bot_user table

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -13,3 +13,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-learned-words.yaml
   - include:
       file: db/changelog/changeset/create-table-requests-statistic.yaml
+  - include:
+      file: db/changelog/changeset/create-index-for-chat-id-in-users-table.yaml
