Added feature with learned words and limiting learning words

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,5 +9,8 @@ spring:
     change-log: classpath:db/changelog/changelog-master.yaml
     enabled: true
 bot:
-  name: $BOT_NAME
-  token: $BOT_TOKEN
+  name: ${BOT_NAME}
+  token: ${BOT_TOKEN}
+
+words:
+  wordsAtTheMoment: ${WORDS_AT_THE_MOMENT:2}
