--- a/src/main/resources/db/changelog/changeset/create-table-requests-statistic.yaml
+++ b/src/main/resources/db/changelog/changeset/create-table-requests-statistic.yaml
@@ -15,7 +15,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: user_id
-                  type: serial
+                  type: integer
                   constraints:
                     nullable: false
                     foreignKeyName: user_id_fk
