--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -15,3 +15,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-requests-statistic.yaml
   - include:
       file: db/changelog/changeset/create-index-for-chat-id-in-users-table.yaml
+  - include:
+      file: db/changelog/changeset/add-column-learned-words.yaml
