Added algorithm to learn starke verben

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -17,3 +17,5 @@ databaseChangeLog:
       file: db/changelog/changeset/create-index-for-chat-id-in-users-table.yaml
   - include:
       file: db/changelog/changeset/add-column-learned-words.yaml
+  - include:
+      file: db/changelog/changeset/create-table-learned-verben.yaml
