Added voice pronounce for starke verben

--- a/deploy/starkebot-configmap-minikube.yaml
+++ b/deploy/starkebot-configmap-minikube.yaml
@@ -6,3 +6,4 @@ data:
   SPRING_DATASOURCE_URL: jdbc:postgresql://host.minikube.internal:5433/starke-db
   WORDS_AT_THE_MOMENT: 12
   VERBS_AT_THE_MOMENT: 12
+  VOICE_DOWNLOADER_URL: voice-downloader-service
