Added field updatedAt to learned words and verbs tables

--- a/src/main/resources/db/changelog/changelog-master.yaml
+++ b/src/main/resources/db/changelog/changelog-master.yaml
@@ -23,3 +23,7 @@ databaseChangeLog:
       file: db/changelog/changeset/create-table-notifications.yaml
   - include:
       file: db/changelog/changeset/add-column-bot-users.yaml
+  - include:
+      file: db/changelog/changeset/add-column-updated-time-learned-words.yaml
+  - include:
+      file: db/changelog/changeset/add-column-updated-time-learned-verbs.yaml
