--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,8 @@ bot:
 
 download-voice-api:
   url: ${VOICE_DOWNLOADER_URL}
+examples-api:
+  url: ${EXAMPLES_URL}
 
 notifications:
   activity: ${NOTIFICATIONS_ACTIVITY:259200000}
