--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -1,3 +1,3 @@
 FROM bellsoft/liberica-openjdk-alpine-musl
-COPY ../build/libs/StarkeVerbenBot-0.0.1-SNAPSHOT.jar app.jar
+COPY ../build/libs/bot.jar app.jar
 ENTRYPOINT ["java","-jar","/app.jar"]
