--- a/bot/src/main/resources/application.yml
+++ b/bot/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true
+    show-sql: false
   liquibase:
     change-log: classpath:db/changelog/changelog-master.yaml
     enabled: true
